# rosbag_contral

./: CMakeLists.txt  README.md  evo.md  package.xml
BrainFuck/BF++out/: BF  BF.cpp
BrainFuck/BFvm/: BF
ceres_test/: CMakeLists.txt  Nonlinear_Curve_Fitting.cpp  Nonlinear_Optimization.cpp  gprof_demo.cpp  performance_demo.cpp  valgrind_demo.cpp
config/: params.yaml  point_raw.txt  poses_lidar2body.csv  test_poses_original.csv  trajectory_tum.txt  trajectory_tum_30fps.txt
config/rviz/: teaching2_dual_gensui.rviz  teaching2_dual_single.rviz  teaching2_dual_xianfeng.rviz  teaching2_view.rviz
gtsam-examples/: gtsamexamples.h
gtsam-examples/cpp/: CMakeLists.txt  GPSPose2Factor.h  Point2c.h  expressions.h  functions.cpp  functions.h
gtsam-examples/cpp/examples/: CustomPoint2Example.cpp  Pose2GPSExample.cpp  Pose2GPSExpressionExample.cpp  Pose2SLAMExample.cpp  Pose2SLAMExpressionExample.cpp
launch/: run.launch
pcl_gpu_test/: CMakeLists.txt  README.md  matrix_eigen.cpp  matrix_eigen_gpu.cu  matrix_eigen_gpu_large.cu  matrix_eigen_large.cpp  matrix_gpu.cu  matrix_light.cpp  pcl_gpu.cpp  pcl_gpu_vision.cpp
scripts/: README_transform_poses.md  bag_to_ereasor.py  bag_to_pcd.py  check_timestamps.py  convert_csv_to_json.py  convert_pose.py  convert_quaternion.py  gt_tum.py  imu_to_txt.py  pose_to_tum.py  rename_pcd.py  rename_pcd_6to5.py  test_transform.py  visualize_poses.py
scripts/convert/: README_transform_poses.md  convert_csv_to_json.py  transform_poses.py
scripts/rosbag/: add_ring.py  bag_to_ereasor.py  bag_to_pcd.py  build_long2_bag_2026_02_19.py  extract_gt_asynchronous_0115_D3_2026_02_19.py  filter_teaching2_dual_lidar_imu.py  pcd_utils.py  split_teaching2_to_dual_2026_02_19.py
scripts/utils/: rename_pcd.py
scripts/visualize/: visualize_two_tum.py
src/: filter_teaching2_dual_lidar_imu.cpp
